[package]
name = "html2md"
version = "0.1.1"
authors = ["Oleg `Kanedias` Chernovskiy <kanedias@xaker.ru>"]

description = "Library and binary to convert simple html documents into markdown"
repository = "https://gitlab.com/Kanedias/html2md"
readme = "README.md"
keywords = ["html", "markdown", "converter"]
categories = ["development-tools", "parsing", "parser-implementations"]
license = "GPL-3.0+"

[badges]
gitlab = { repository = "Kanedias/html2md", branch = "master" }
maintenance = { status = "experimental" }

[lib]
name = "html2md"
crate-type = ["rlib", "dylib", "staticlib"]

[dependencies]
lazy_static = "1.0.0"
html5ever = "0.22"
regex = "0.2"

[profile.release]
lto = true
panic = 'abort'

# To use this project on Android we need JNI
[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.9.3", default-features = false }
