[package]
name = "html2md"
version = "0.2.9"
edition = "2018"
authors = ["Oleg `Kanedias` Chernovskiy <kanedias@xaker.ru>"]

description = "Library and binary to convert simple html documents into markdown"
repository = "https://gitlab.com/Kanedias/html2md"
readme = "README.md"
keywords = ["html", "markdown", "converter"]
categories = ["development-tools", "parsing", "parser-implementations"]
license = "GPL-3.0+"

[badges]
gitlab = { repository = "Kanedias/html2md", branch = "master" }
maintenance = { status = "experimental" }

[lib]
name = "html2md"
crate-type = ["rlib", "dylib", "staticlib"]

[dependencies]
# string_cache_codegen = "0.4.2" # Needed for markup5ever
lazy_static = "1.4.0"
html5ever = "0.25.1"
markup5ever_rcdom = "0.1.0"
regex = "1.3.1"
percent-encoding = "2.1.0"

[dev-dependencies]
spectral = "0.6.0"
indoc = "0.3"

[profile.release]
debug = false
lto = true
panic = 'abort'

# To use this project on Android we need JNI
[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.14.0", default-features = false }
